Add git_mode
